[package]
name = "commander"
version = "0.3.4"
edition = "2021"
authors = ["Artur Gwoździowski"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.7.1"
tokio = { version = "1.21.1", features = ["full"] }
env_logger = "0.10.0"
hyper = { version = "0.14.23", features = ["full"] }
tokio-util = "0.7.4"
anyhow = "1.0.68"
chrono = "0.4.23"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
bytes = "1.2.1"
lazy_static = "1.4.0"
rand = "0.8.5"
firebase-rs = "2.0.5"
base64 = "0.21.0"
openssl-src = "300.0.12"
openssl = { version = "0.10", features = ["vendored"] }
rppal = "0.14.1"
clap = { version = "4.1.8", features = ["derive"] }
