[package]
name = "commander"
version = "0.5.6"
edition = "2021"
authors = ["Artur Gwoździowski"]
description = "remote robot control process based on webrtc-rs v0.9"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.9.0"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
anyhow = "1.0.75"
chrono = "0.4.31"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bytes = "1.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"
firebase-rs = "2.0.8"
base64 = "0.21.4"
openssl-src = "300.1.5"
openssl = { version = "0.10.57" }
#rppal = "0.14.1"
clap = { version = "4.4.6", features = ["derive"] }

[build-dependencies]
embed-resource = "2.3.0"
